fixed-whitespace/pre-footer spacing

--- a/template/css/myStyle.css
+++ b/template/css/myStyle.css
@@ -1,6 +1,12 @@
 .dep a{
 	font-size: 14px;
 }
-.dep{
-	
+#k-footer{
+	padding: 0px;
+}
+.grey-col{
+	background:rgba(0,0,0,0.002);
+}
+.lgrey-col{
+	background:rgba(0,0,0,0.02);
 }
